--- a/blog/locale/en/LC_MESSAGES/django.po
+++ b/blog/locale/en/LC_MESSAGES/django.po
@@ -20,23 +20,23 @@ msgstr ""
 
 #: app_posts/templates/app_posts/base.html:216
 msgid "Home"
-msgstr ""
+msgstr "2HomeEEE"
 
 #: app_posts/templates/app_posts/base.html:217
 msgid "New features"
-msgstr ""
+msgstr "New features"
 
 #: app_posts/templates/app_posts/base.html:218
 msgid "Press"
-msgstr ""
+msgstr "Press"
 
 #: app_posts/templates/app_posts/base.html:219
 msgid "New hires"
-msgstr ""
+msgstr "New hires"
 
 #: app_posts/templates/app_posts/base.html:220
 msgid "About"
-msgstr ""
+msgstr "About"
 
 #: env/lib/python3.5/site-packages/django/contrib/messages/apps.py:7
 msgid "Messages"
